--- a/style.css
+++ b/style.css
@@ -55,3 +55,62 @@ div > div {
   width: 80vw;
   font-size: 20px;
 }
+
+/* Portfolio card layout */
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  gap: 15px;
+  grid-auto-flow: row;
+  max-width: 20%;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+  background-color: rgb(255, 255, 255);
+}
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.div3 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.div4 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+.div1,
+.div2,
+.div3,
+.div4 {
+  border-radius: 10px;
+  padding: 20px;
+  border: solid 1px rgba(129, 224, 245, 0.507);
+  box-shadow: 0px 1px 4px rgb(77, 77, 77);
+  width: 200px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: inset 0 0 14px #c7ebf0;
+  color: rgb(92, 88, 88);
+}
+
+.projectTitle {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 12px;
+  border-bottom: 1px solid;
+  text-align: center;
+}
+
+.githubLink {
+  display: inline-block;
+  border-radius: 5px;
+  background-color: rgb(149, 149, 182);
+  padding: 12px;
+  margin-top: 20px;
+  color: #fff;
+  text-decoration: none;
+}
